@@ -35,6 +35,9 @@ FS reiser4::get_filesystem_support()
 	if ( ! Glib::find_program_in_path( "fsck.reiser4" ) .empty() )
 		fs .check = GParted::FS::EXTERNAL ;
 	
+	if ( ! Glib::find_program_in_path( "dd" ) .empty() )
+		fs .copy = GParted::FS::EXTERNAL ;
+	
 	/*
 	 * IT SEEMS RESIZE AND COPY AREN'T IMPLEMENTED YET IN THE TOOLS...
 	 * SEE http://marc.theaimsgroup.com/?t=109883161600003&r=1&w=2 for more information.. 
@@ -93,7 +96,20 @@ bool reiser4::Copy( const Glib::ustring & src_part_path,
 		    const Glib::ustring & dest_part_path,
 		    std::vector<OperationDetails> & operation_details )
 {
-	return true ;
+	operation_details .push_back( OperationDetails( 
+				String::ucompose( _("copy contents of %1 to %2"), src_part_path, dest_part_path ) ) ) ;
+
+	if ( ! execute_command( "dd bs=8192 if=" + src_part_path + " of=" + dest_part_path,
+				 operation_details .back() .sub_details ) )
+	{
+		operation_details .back() .status = OperationDetails::SUCCES ;
+		return true ;	
+	}
+	else
+	{
+		operation_details .back() .status = OperationDetails::ERROR ;
+		return false ;
+	}
 }
 
 bool reiser4::Check_Repair( const Partition & partition, std::vector<OperationDetails> & operation_details )
