@@ -1,4 +1,10 @@
 2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/Dialog_Partition_Copy.cc: only allow growing of copy if there is
+	  grow support for the filesystem.
+	* src/reiser4.cc: added support for copying reiser4 filesystems
+
+2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* src/GParted_Core.cc: modified warning
 	* src/hfsplus.cc: added support for shrinking and copying hfs+
